
config("main_config") {
  include_dirs = [ "." ]
}

executable("main") {
  sources = [
    "file.txt",
    "list.h",
    "macros.h",
    "main.cpp",
    "string_ext.cpp",
    "string_ext.h",
    "util.h",
    "chapter1/chapter1.cpp",
    "chapter1/chapter1.h",
    "chapter2/chapter2.cpp",
    "chapter2/chapter2.h",
    "chapter3/chapter3_2.cpp",
    "chapter3/chapter3_2.h",
    "chapter3/chapter3_3.cpp",
    "chapter3/chapter3_3.h",
    "chapter3/chapter3_4.cpp",
    "chapter3/chapter3_4.h",
    "chapter5/template_chapter5.h",
    "chapter5/template_chapter5.cpp",
    "chapter6/template_chapter6.h",
    "chapter6/template_chapter6.cpp",
    "chapter8/chapter8.h",
    "chapter8/chapter8.cpp",
    "chapter12/chapter12.cpp",
    "chapter12/chapter12.h",
    "chapter12/chapter12_1.cpp",
    "chapter12/chapter12_1.h",
    "chapter12/SkBitmap.cpp",
    "chapter12/SkBitmap.h",
    "chapter13/chapter13.cpp",
    "chapter13/chapter13.h",
    "chapter13/chapter13_4.cpp",
    "chapter13/chapter13_4.h",
    "chapter14/chapter14.cpp",
    "chapter14/chapter14.h",
    "chapter15/chapter15.cpp",
    "chapter15/chapter15.h",
    "chapter16/chapter16.cpp",
    "chapter16/chapter16.h",
  ]
  configs += [
    ":main_config",
  ]
  deps = [
    "//webkit:webkit_static",
  ]
}
