
config("webkit_config") {
  defines = [ "WTF_COMPILER_GCC", 
              "OS_WIN", 
              "ENABLE_ASSERT",  
              "ENABLE_SECURITY_ASSERT",
              "ADDRESS_SANTINIZER",
            ]
  include_dirs = [ "." ]
}

static_library("webkit_static") {
  sources = [
    "Config.h",
    "wtf/RawPtr.h",
    "wtf/Assertions.cpp",
    "wtf/Threading.cpp",
    "WebKitTest.cpp",
  ]
  public_configs = [ 
    ":webkit_config", 
  ]
}
